changes from a long time ago

--- a/c++/Makefile
+++ b/c++/Makefile
@@ -4,9 +4,9 @@ CFLAGS="-Wall"
 
 .PHONY: clean
 
-prog: main.cpp rectangle.o vector.o
+pyth: main.cpp rectangle.o vector.o
 	g++ $(CFLAGS) $(SDLCFLAGS) -c main.cpp
-	g++ $(CFLAGS) $(SDLCFLAGS) $(SDLLFLAGS) -o prog main.o rectangle.o vector.o
+	g++ $(CFLAGS) $(SDLCFLAGS) $(SDLLFLAGS) -o $@ main.o rectangle.o vector.o
 
 rectangle.o: rectangle.cpp rectangle.hpp
 	g++ $(CFLAGS) $(SDLCFLAGS) -c rectangle.cpp
@@ -15,7 +15,5 @@ vector.o: vector.cpp vector.hpp
 	g++ $(CFLAGS) $(SDLCFLAGS) -c vector.cpp
 
 clean:
-	rm -f main.o
-	rm -f rectangle.o
-	rm -f vector.o
-	rm -f prog
+	rm -f *.o
+	rm -f pyth
